# SecChem

./: ACT_USAGE.md  CMakeLists.txt  LICENSE  README.md  main.cpp
.github/workflows/: linux.yml  local.yml  macos.yml  windows.yml
SecChem/: Atom.hpp  AtomicElectronConfiguration.hpp  AzimuthalQuantumNumber.hpp  ElectronicSubShell.hpp  ElectronicSubshell.hpp  Element.hpp  Geometry.Input.hpp  Molecule.cpp  Molecule.hpp  System.hpp
SecChem/BasisSet/: Gaussian.AzimuthalShell.hpp  Gaussian.BasisSet.hpp  Gaussian.ContractedRadialOrbitalSet.hpp  Gaussian.MolecularBasisSet.hpp  Gaussian.SemiLocalEcp.hpp  Gaussian.hpp
SecChem/BasisSet/Detail/: Gaussian.AngularMomentumBlock.hpp  Gaussian.AzimuthalShell.hpp  Gaussian.BasisSet.hpp  Gaussian.ContractedRadialOrbitalSet.hpp  Gaussian.Forward.hpp  Gaussian.MolecularBasisSet.hpp  Gaussian.SemiLocalEcp.hpp
SecChem/Polyfill/: flat_map.hpp
SecChem/Utility/: IEquatableWithTolerance.hpp  Parser.hpp  Process.hpp  StringUtility.hpp  UnitOfMeasurement.hpp
scripts/: act-local.sh
tests/: AngularMomentumBlockTest.cpp  AtomTest.cpp  AtomicElectronConfigurationTest.cpp  AzimuthalQuantumNumberTest.cpp  AzimuthalShellTest.cpp  BasisParserTest.cpp  BasisSetExchangeJsonParserExample.cpp  BasisSetExchangeJsonParserExample.hpp  BasisSetTest.cpp  CMakeLists.txt  ContractedRadialOrbitalSetTest.cpp  ElectronicSubShellTest.cpp  ElementTest.cpp  GeometryInputTest.cpp  InternalCoordinateLineParseTest.cpp  MolecularBasisSetTest.cpp  MoleculeTest.cpp  PolyfillFlatMapTest.cpp  ProcessTest.cpp  SemiLocalEcpTest.cpp
